Not sure why this wasn't checked in earlier. Updates to build from a while ago.